--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -76,12 +76,12 @@
             </div>
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h5 class="brighten">Attire: <a href="http://www.realsimple.com/beauty-fashion/clothing/dress-code" target="_blank">semiformal</a> (or whatever suits you, get it?).</h5>
+                    <h5 class="brighten attire">Attire: <a href="http://www.realsimple.com/beauty-fashion/clothing/dress-code" target="_blank">semiformal</a> (or whatever suits you, get it?).</h5>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 intro-feature">
-                    <div class="intro-content">
+                    <div class="col-md-offset-1 intro-content">
                         <h6>ceremony &middot; 4:30pm–5pm</h6>
                         <p><a href="http://www.ascensionbrooklyn.org/" target="_blank">Church of the Ascension</a><br>
                         127 Kent Street near Manhattan Avenue<br>
@@ -96,7 +96,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 intro-feature">
-                    <div class="intro-content">
+                    <div class="col-md-offset-1 intro-content">
                         <h6>dinner &middot; 6–9pm</h6>
                         <p><a href="http://www.stmazie.com/" target="_blank">Saint Mazie Bar & Supper Club</a> (We'll be in the <a href="http://stcharlescellar.com/"  target="_blank">basement</a>.)<br>
                         345 Grand Street near Havemeyer Street<br>
@@ -113,7 +113,7 @@
             </div>
         </div>
     </section>
-    <section class="section-padding">
+    <section>
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -135,7 +135,7 @@
             </div>
         </div>
     </section>
-    <section class="section-padding" id="readings">
+    <section class="features section-padding" id="readings">
         <div class="container">
             <div class="row">
                 <div>
@@ -143,33 +143,34 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-7 wp1">
+                <div class="col-md-5 wp1 col-md-offset-1 text-right">
                     <img src="img/dickinson.png" alt="Dickinson" class="dickinson">
                 </div>
                 <div class="col-md-1">
                     <h5 class="brighten pull-right">1.</h5>
                 </div>
                 <div class="col-md-4">
-                    <h5>Forever – is composed of Nows</h5>
+                    <h5>Forever&#8212;is composed of Nows</h5>
                     <h6>by Emily Dickinson</h6>
-                    <p>Forever – is composed of Nows –<br>
-                    ‘Tis not a different time –<br>
-                    Except for Infiniteness –<br>
-                    And Latitude of Home –<br>
-                    <br><br>
-                    From this – experienced Here –<br>
-                    Remove the Dates – to These –<br>
-                    Let Months dissolve in further Months –<br>
-                    And Years – exhale in Years –<br>
-                    <br><br>
-                    Without Debate – or Pause –<br>
-                    Or Celebrated Days –<br>
+                    <br>
+                    <p>Forever – is composed of Nows&#8212;<br>
+                    ‘Tis not a different time&#8212;<br>
+                    Except for Infiniteness&#8212;<br>
+                    And Latitude of Home&#8212;<br>
+                    <br>
+                    From this&#8212;experienced Here&#8212;<br>
+                    Remove the Dates&#8212;to These&#8212;<br>
+                    Let Months dissolve in further Months&#8212;<br>
+                    And Years&#8212;exhale in Years&#8212;<br>
+                    <br>
+                    Without Debate&#8212;or Pause&#8212;<br>
+                    Or Celebrated Days&#8212;<br>
                     No different Our Years would be<br>
-                    From Anno Dominies –</p>
+                    From Anno Dominies&#8212;</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-7 wp2">
+                <div class="col-md-5 wp2 col-md-offset-1 text-right">
                     <img src="img/eliot.png" alt="Eliot" class="eliot">
                 </div>
                 <div class="col-md-1">
@@ -178,22 +179,23 @@
                 <div class="col-md-4">
                     <h5>Count That Day Lost </h5>
                     <h6>by George Eliot</h6>
+                    <br>
                     <p>If you sit down at set of sun<br>
                     And count the acts that you have done,<br>
                     And, counting, find<br>
                     One self-denying deed, one word<br>
                     That eased the heart of him who heard,<br>
                     One glance most kind<br>
-                    That fell like sunshine where it went —<br>
+                    That fell like sunshine where it went&#8212;<br>
                     Then you may count that day well spent.<br>
-                    <br><br>
+                    <br>
                     But if, through all the livelong day,<br>
-                    You've cheered no heart, by yea or nay —<br>
+                    You've cheered no heart, by yea or nay&#8212;<br>
                     If, through it all<br>
                     You've nothing done that you can trace<br>
-                    That brought the sunshine to one face—<br>
+                    That brought the sunshine to one face&#8212;<br>
                     No act most small<br>
-                    That helped some soul and nothing cost —<br>
+                    That helped some soul and nothing cost&#8212;<br>
                     Then count that day as worse than lost.</p>
                 </div>
             </div>
@@ -201,15 +203,18 @@
     </section>
     <section class="section-padding" id="brooklyn">
         <div class="container">
-            <div class="col-md-12 text-center">
-                <h2>Hello Brooklyn</h2>
-                <p>Here's our guide to the neighborhood for all you out-of-towners. <strong>Note:</strong> a lot of places in Brooklyn are cash only so watch out!</p>
-                <a href="https://www.youtube.com/watch?v=8LmPBPWHJu4" target="_blank" class="btn btn-ghost btn-accent btn-large">First, watch this!</a>
-                <br><br>
-                <a href="https://www.google.com/maps/d/edit?mid=z8DLb-zjv3Kc.kTkiLAmsmkTc&usp=sharing" target="_blank"><img src="img/map.jpg" class="map" alt="North Brooklyn map"></a>
-                <br><br>
-                <a href="https://www.google.com/maps/d/edit?mid=z8DLb-zjv3Kc.kTkiLAmsmkTc&usp=sharing" target="_blank">view on Google Maps</a>
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <h2>Hello Brooklyn</h2>
+                    <p>Here's our guide to the neighborhood for all you out-of-towners. <strong>Note:</strong> a lot of places in Brooklyn are cash only so watch out!</p>
+                    <a href="https://www.youtube.com/watch?v=8LmPBPWHJu4" target="_blank" class="btn btn-ghost btn-accent btn-large">First, watch this!</a>
+                    <br><br>
+                    <a href="https://www.google.com/maps/d/edit?mid=z8DLb-zjv3Kc.kTkiLAmsmkTc&usp=sharing" target="_blank"><img src="img/map.jpg" class="map" alt="North Brooklyn map"></a>
+                    <br><br>
+                    <a href="https://www.google.com/maps/d/edit?mid=z8DLb-zjv3Kc.kTkiLAmsmkTc&usp=sharing" target="_blank">view on Google Maps</a>
+                </div>
             </div>
+        <hr>
         </div>
     </section>
     <section class="section-padding" id="accommodations">
@@ -224,28 +229,28 @@
                     <hr>
                     <h5>Hotel le Jolie <span class="brighten pull-right">718.625.2100</span></h5>
                     <p><em>The best value in the neighborhood. Great location, no frills.</em><br>
-                    235 Meeker Avenue between Union Avenue and Lorimer Street, Brooklyn<br>
+                    235 Meeker Avenue between Union Avenue and Lorimer Street<br>
                     <a href="http://www.hotellejolie.com/" target="_blank">visit website</a></p>
                     <hr>
                     <h5>McCarren Hotel & Pool <span class="brighten pull-right">718.218.750</span></h5>
                     <p><em>Upscale and right near the park.</em><br>
-                    160 North 12th Street between Berry Street and Bedford Avenue, Brooklyn<br>
+                    160 North 12th Street between Berry Street and Bedford Avenue<br>
                     <a href="http://www.chelseahotels.com/us/brooklyn/mccarren-hotel-and-pool/about" target="_blank">visit website</a></p>
                     <hr>
                     <h5>The Henry Norman Hotel <span class="brighten pull-right">718.951.6000</span></h5>
                     <p><em>A little out of the way but very nice.</em><br>
-                    251 North Henry Street, Brooklyn<br>
+                    251 North Henry Street<br>
                     <a href="http://www.henrynormanhotel.com/" target="_blank">visit website</a></p>
                     <hr>
-                    <h5>Urban Cowboy BnB <span class="brighten pull-right">347.840.0525</span></h5>
+                    <h5>Urban Cowboy B&B <span class="brighten pull-right">347.840.0525</span></h5>
                     <p><em>Rustic and relaxing with a cozy cabin feel.</em><br>
-                    111 Powers between Leonard Street and Manhattan Avenue, Brooklyn<br>
+                    111 Powers Street between Leonard Street and Manhattan Avenue<br>
                     <a href="http://urbancowboybnb.com/" target="_blank">visit website</a></p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="section-padding" id="transportation">
+    <section class="features section-padding" id="transportation">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
@@ -259,14 +264,14 @@
                     <h3>Car Services</h3>
                     <p>These are the car service companies available in our neighborhood. You can call them anytime and usually be picked up within five minutes. </p>
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-3 col-md-offset-1">
                             <p>
                                 <strong>Northside Car Service</strong><br>
                                 <strong>Mobile Car Service</strong><br>
                                 <strong>United Car Service</strong>
                             </p>
                         </div>
-                        <div class="col-md-7">
+                        <div class="col-md-8">
                             <p class="brighten expand">718.387.2222<br>
                                 718.383.8300<br>
                                 718.349.5900
@@ -281,20 +286,21 @@
     <section class="history section-padding" id="history">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 col-md-offset-1">
                     <div class="feature-list">
                         <h2>A Little Context</h2>
                         <p>Read about the history of Greenpoint, Church of the Ascension, and Saint Mazie!</p>
                         <p><a href="../assets/north-brooklyn-history.pdf" target="_blank" class="btn btn-ghost btn-accent btn-small">View PDF</a></p>
                     </div>
                 </div>
-                <div class="col-md-6 wp3">
+                <div class="col-md-5 wp3">
                     <img src="img/theater.png" alt="Theater" class="theater">
                 </div>
             </div>
+        <hr>
         </div>
     </section>
-    <section class="section-padding" id="jc-gallery">
+    <section class="section-padding" id="gallery">
         <div class="gallery text-center">
             <h2>Jillian & Chris</h2>
             <div class="container">
@@ -318,6 +324,7 @@
                     </div><!-- /.modal-content -->
                 </div><!-- /.modal-dialog -->
             </div><!-- /.modal -->
+        <hr>
         </div>
     </section>
     <section class="section-padding" id="collaborate">
@@ -349,7 +356,7 @@
             </div>
         </div>
     </section>
-    <section class="section-padding" id="hashtag">
+    <section class="features section-padding" id="hashtag">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
@@ -373,6 +380,7 @@
                     <p>If you have a food allergy, dietary restriction, or any special request, please let us know in your RSVP or contact us anytime and we'll make sure you don't go hungry.</p>
                 </div>
             </div>
+        <hr>
         </div>
     </section>
     <section class="section-padding" id="registry">
@@ -417,13 +425,14 @@
                     </div>
                 </div>
             </div>
+        <hr>
         </div>
     </section>
     <section class="section-padding">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h2>Thank you everyone!</h2>
+                    <h2>Thanks everyone!</h2>
                 </div>
             </div>
         </div>
@@ -450,7 +459,7 @@
                             <li><a href="#accommodations">accommodations</a></li>
                             <li><a href="#transportation">transport</a></li>
                             <li><a href="#history">history</a></li>
-                            <li><a href="#jc-gallery">jillian & chris</a></li>
+                            <li><a href="#gallery">jillian & chris</a></li>
                             <li><a href="#collaborate">collaborate</a></li>
                             <li><a href="#faq">FAQs</a></li>
                             <li><a href="#registry">registry</a></li>
