--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -305,15 +305,15 @@
             <h2>Jillian & Chris</h2>
             <div class="container">
                 <ul class="row">
-                    <li class="col-md-4"><img src="img/1.png" alt="photo 1"></li>
-                    <li class="col-md-4"><img src="img/2.png" alt="photo 2"></li>
-                    <li class="col-md-4"><img src="img/3.png" alt="photo 3"></li>
-                    <li class="col-md-4"><img src="img/4.png" alt="photo 4"></li>
-                    <li class="col-md-4"><img src="img/6.png" alt="photo 6"></li>
-                    <li class="col-md-4"><img src="img/7.png" alt="photo 7"></li>
-                    <li class="col-md-4"><img src="img/8.png" alt="photo 8"></li>
-                    <li class="col-md-4"><img src="img/5.png" alt="photo 5"></li>
-                    <li class="col-md-4"><img src="img/9.png" alt="photo 9"></li>
+                    <li class="col-md-4"><img src="img/1.jpg" alt="photo 1"></li>
+                    <li class="col-md-4"><img src="img/2.jpg" alt="photo 2"></li>
+                    <li class="col-md-4"><img src="img/3.jpg" alt="photo 3"></li>
+                    <li class="col-md-4"><img src="img/4.jpg" alt="photo 4"></li>
+                    <li class="col-md-4"><img src="img/6.jpg" alt="photo 6"></li>
+                    <li class="col-md-4"><img src="img/7.jpg" alt="photo 7"></li>
+                    <li class="col-md-4"><img src="img/8.jpg" alt="photo 8"></li>
+                    <li class="col-md-4"><img src="img/5.jpg" alt="photo 5"></li>
+                    <li class="col-md-4"><img src="img/9.jpg" alt="photo 9"></li>
                 </ul>
             </div>
             <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
