quick photo fix

--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -144,7 +144,7 @@
             </div>
             <div class="row">
                 <div class="col-md-5 wp1 col-md-offset-1 text-right">
-                    <img src="img/dickinson.png" alt="Dickinson" class="dickinson">
+                    <img src="img/dickinson.jpg" alt="Dickinson" class="dickinson">
                 </div>
                 <div class="col-md-1">
                     <h5 class="brighten pull-right">1.</h5>
@@ -171,7 +171,7 @@
             </div>
             <div class="row">
                 <div class="col-md-5 wp2 col-md-offset-1 text-right">
-                    <img src="img/eliot.png" alt="Eliot" class="eliot">
+                    <img src="img/eliot.jpg" alt="Eliot" class="eliot">
                 </div>
                 <div class="col-md-1">
                     <h5 class="brighten pull-right">2.</h5>
@@ -305,15 +305,15 @@
             <h2>Jillian & Chris</h2>
             <div class="container">
                 <ul class="row">
-                    <li class="col-md-4"><img src="img/1.jpg" alt="photo 1"></li>
-                    <li class="col-md-4"><img src="img/2.jpg" alt="photo 2"></li>
-                    <li class="col-md-4"><img src="img/3.jpg" alt="photo 3"></li>
-                    <li class="col-md-4"><img src="img/4.jpg" alt="photo 4"></li>
-                    <li class="col-md-4"><img src="img/6.jpg" alt="photo 6"></li>
-                    <li class="col-md-4"><img src="img/7.jpg" alt="photo 7"></li>
-                    <li class="col-md-4"><img src="img/8.jpg" alt="photo 8"></li>
-                    <li class="col-md-4"><img src="img/5.jpg" alt="photo 5"></li>
-                    <li class="col-md-4"><img src="img/9.jpg" alt="photo 9"></li>
+                    <li class="col-md-3"><img src="img/1.jpg" alt="photo 1"></li>
+                    <li class="col-md-3"><img src="img/2.jpg" alt="photo 2"></li>
+                    <li class="col-md-3"><img src="img/3.jpg" alt="photo 3"></li>
+                    <li class="col-md-3"><img src="img/4.jpg" alt="photo 4"></li>
+                    <li class="col-md-3"><img src="img/5.jpg" alt="photo 5"></li>
+                    <li class="col-md-3"><img src="img/6.jpg" alt="photo 6"></li>
+                    <li class="col-md-3"><img src="img/7.jpg" alt="photo 7"></li>
+                    <li class="col-md-3"><img src="img/8.jpg" alt="photo 8"></li>
+                    <li class="col-md-3"><img src="img/9.jpg" alt="photo 9"></li>
                 </ul>
             </div>
             <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
