--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -130,7 +130,7 @@
                         <li>refreshments</li>
                     </ul>
                     <br>
-                    <p class="brighten">Rides to Saint Mazie Bar & Supper Club start at <strong>5:15pm</strong>.</p>
+                    <p class="brighten">Rides will be provided to from the church to the restaurant and will begin at <strong>5:15pm</strong>.</p>
                 </div>
             </div>
         </div>
