--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -207,11 +207,11 @@
                 <div class="col-md-12 text-center">
                     <h2>Hello Brooklyn</h2>
                     <p>Here's our guide to the neighborhood for all you out-of-towners. <strong>Note:</strong> a lot of places in Brooklyn are cash only so watch out!</p>
-                    <a href="https://www.youtube.com/watch?v=8LmPBPWHJu4" target="_blank" class="btn btn-ghost btn-accent btn-large">First, watch this!</a>
+                    <a href="https://www.youtube.com/watch?v=8LmPBPWHJu4" target="_blank" class="btn btn-ghost btn-accent btn-large">First, watch this</a>
                     <br><br>
                     <a href="https://www.google.com/maps/d/edit?mid=z8DLb-zjv3Kc.kTkiLAmsmkTc&usp=sharing" target="_blank"><img src="img/map.jpg" class="map" alt="North Brooklyn map"></a>
                     <br><br>
-                    <a href="https://www.google.com/maps/d/edit?mid=z8DLb-zjv3Kc.kTkiLAmsmkTc&usp=sharing" target="_blank">view on Google Maps</a>
+                    <a href="https://www.google.com/maps/d/edit?mid=z8DLb-zjv3Kc.kTkiLAmsmkTc&usp=sharing" target="_blank">View our extended Google Map!</a>
                 </div>
             </div>
         <hr>
