--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -207,8 +207,6 @@
                 <div class="col-md-12 text-center">
                     <h2>Hello Brooklyn</h2>
                     <p>Here's our guide to the neighborhood for all you out-of-towners. <strong>Note:</strong> a lot of places in Brooklyn are cash only so watch out!</p>
-                    <a href="https://www.youtube.com/watch?v=8LmPBPWHJu4" target="_blank" class="btn btn-ghost btn-accent btn-large">First, watch this</a>
-                    <br><br>
                     <a href="https://www.google.com/maps/d/edit?mid=z8DLb-zjv3Kc.kTkiLAmsmkTc&usp=sharing" target="_blank"><img src="img/map.jpg" class="map" alt="North Brooklyn map"></a>
                     <br><br>
                     <a href="https://www.google.com/maps/d/edit?mid=z8DLb-zjv3Kc.kTkiLAmsmkTc&usp=sharing" target="_blank">View our extended Google Map!</a>
@@ -319,6 +317,14 @@
                     <li class="col-md-4"><img src="img/8.jpg" alt="photo 8"></li>
                     <li class="col-md-4"><img src="img/9.jpg" alt="photo 9"></li>
                 </ul>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h5 class="brighten">Check out our <a class='reveal'>video!</a></h5>
+                        <div class="viddy">
+                            <iframe src="https://player.vimeo.com/video/139133207?color=00f0c8" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                        </div>  
+                    </div>
+                </div>
             </div>
             <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
