--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -319,7 +319,7 @@
                 </ul>
                 <div class="row">
                     <div class="col-md-12">
-                        <h5 class="brighten">Check out our <a class='reveal'>video!</a></h5>
+                        <h5 class="brighten footy">Check out our <a class='reveal'>video!</a></h5>
                         <div class="viddy">
                             <iframe src="https://player.vimeo.com/video/139133207?color=00f0c8" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>  
