figcaption spacing fix

--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -224,7 +224,7 @@
                     <h5>Airbnb</h5>
                     <p class="bump"><em>Airbnb is a great way to take advantage of some amazing apartment rentals in Brooklyn.</em></p>
                     <p class="bump">And may I recommend <a href="https://www.airbnb.com/rooms/634041" target="_blank">this apartment</a> in particular&#8212;it’s an excellent location for our event, an <a href="http://www.apartmenttherapy.com/house-tour-alanas-brooklyn-railroad-199300" target="_blank">Apartment Therapy greatest hit</a> and just happens to be my boss’s place!</p>
-                    <p><a href="https://www.airbnb.com/" target="_blank">visit website</a></p>
+                    <p><a href="https://www.airbnb.com/" target="_blank">visit Airbnb website</a></p>
                     <hr>
                     <h5>Hotel le Jolie <span class="brighten pull-right">718.625.2100</span></h5>
                     <p class="bump"><em>The best value in the neighborhood. Great location, no frills.</em></p>
