--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -406,7 +406,7 @@
                                     </div>
                                 </a>
                                 <figcaption>
-                                    <p>In lieu of a traditional registry, we're asking people to make a donation to Earthjustice. You can give <a href="https://secure.earthjustice.org/site/Donation2?df_id=10929&10929.donation=form1&s_subsrc=SubNav" target="_blank">online</a> or over the phone at <strong>415.217.2000</strong> (M-F 12pm–8pm, Eastern Time).</p>
+                                    <p>In lieu of a traditional registry, we're asking people to make a donation to Earthjustice. You can give <a href="https://secure.earthjustice.org/site/Donation2?df_id=10929&10929.donation=form1&s_subsrc=SubNav" target="_blank">online</a> or over the phone at <strong>415.217.2000</strong> (M&#8211;F 12pm&#8211;8pm, Eastern Time).</p>
                                     <p>Please include either or both of our names and our address:</p>
                                     <p><strong>68 Box Street #2R</strong><br>
                                     <strong>Brooklyn, NY 11222</strong></p>
