--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -82,7 +82,7 @@
             <div class="row">
                 <div class="col-md-6 intro-feature">
                     <div class="col-md-offset-1 intro-content">
-                        <h6>ceremony &middot; 4:30pm–5pm</h6>
+                        <h6>ceremony &middot; 4:30pm&#8211;5pm</h6>
                         <p><a href="http://www.ascensionbrooklyn.org/" target="_blank">Church of the Ascension</a><br>
                         127 Kent Street near Manhattan Avenue<br>
                         <em>Near the Greenpoint Avenue stop on the G Train</em></p>
@@ -97,7 +97,7 @@
                 </div>
                 <div class="col-md-6 intro-feature">
                     <div class="col-md-offset-1 intro-content">
-                        <h6>dinner &middot; 6–9pm</h6>
+                        <h6>dinner &middot; 6&#8211;9pm</h6>
                         <p><a href="http://www.stmazie.com/" target="_blank">Saint Mazie Bar & Supper Club</a> (We'll be in the <a href="http://stcharlescellar.com/"  target="_blank">basement</a>.)<br>
                         345 Grand Street near Havemeyer Street<br>
                         <em>Near the Metropolitan Avenue stop on the G Train</em></p>
@@ -153,7 +153,7 @@
                     <h5>Forever&#8212;is composed of Nows</h5>
                     <h6>by Emily Dickinson</h6>
                     <br>
-                    <p>Forever – is composed of Nows&#8212;<br>
+                    <p>Forever&#8212;is composed of Nows&#8212;<br>
                     ‘Tis not a different time&#8212;<br>
                     Except for Infiniteness&#8212;<br>
                     And Latitude of Home&#8212;<br>
