fix footy links

--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -209,7 +209,7 @@
                     <p>Here's our guide to the neighborhood for all you out-of-towners. <strong>Note:</strong> a lot of places in Brooklyn are cash only so watch out!</p>
                     <a href="https://www.google.com/maps/d/edit?mid=z8DLb-zjv3Kc.kTkiLAmsmkTc&usp=sharing" target="_blank"><img src="img/map.jpg" class="map" alt="North Brooklyn map"></a>
                     <br><br>
-                    <a href="https://www.google.com/maps/d/edit?mid=z8DLb-zjv3Kc.kTkiLAmsmkTc&usp=sharing" target="_blank">View our extended Google Map!</a>
+                    <h5 class="footy"><a href="https://www.google.com/maps/d/edit?mid=z8DLb-zjv3Kc.kTkiLAmsmkTc&usp=sharing" target="_blank">View our extended Google Map!</a></h5>
                 </div>
             </div>
         <hr>
@@ -320,7 +320,7 @@
                 </ul>
                 <div class="row">
                     <div class="col-md-12">
-                        <h5 class="brighten footy">Check out our <a class='reveal'>video!</a></h5>
+                        <h5 class="footy"><a class='reveal'>Check out our video!</a></h5>
                         <div class="viddy">
                             <iframe src="https://player.vimeo.com/video/139133207?color=00f0c8" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>  
