--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -47,6 +47,9 @@
                             </ul>
                         </nav>
                     </div>
+                    <div class="navicon">
+                        <a class="nav-toggle" href="#"><span></span></a>
+                    </div>
                 </div>
             </header>
         </section>
