--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -121,7 +121,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <h2>Ceremony Schedule</h2>
-                    <h6>The ceremony will take place at <strong>4:30pm</strong> but guests can begin ariving at <strong>4pm.</strong></h6>
+                    <h6>The ceremony will take place at <strong>4:30pm</strong> but guests can begin arriving at <strong>4pm.</strong></h6>
                     <ul>
                         <li>prelude</li>
                         <li>processional</li>
@@ -226,27 +226,26 @@
                     <br>
                     <h5>Airbnb</h5>
                     <p class="bump"><em>Airbnb is a great way to take advantage of some amazing apartment rentals in Brooklyn.</em></p>
-                    <p class="bump">And may I recommend <a href="https://www.airbnb.com/rooms/634041" target="_blank">this apartment</a> in particular&#8212;it’s an excellent location for our event, an <a href="http://www.apartmenttherapy.com/house-tour-alanas-brooklyn-railroad-199300" target="_blank">Apartment Therapy greatest hit</a> and just happens to be my boss’s place!</p>
                     <p><a href="https://www.airbnb.com/" target="_blank">visit Airbnb website</a></p>
                     <hr>
                     <h5>Hotel le Jolie <span class="brighten pull-right">718.625.2100</span></h5>
-                    <p class="bump"><em>The best value in the neighborhood. Great location, no frills.</em></p>
-                    <p class="bump">235 Meeker Avenue between Union Avenue and Lorimer Street</p>
+                    <p class="bump"><em>The best value in the neighborhood. Great location, no frills.</em><br>
+                    235 Meeker Avenue between Union Avenue and Lorimer Street</p>
                     <p><a href="http://www.hotellejolie.com/" target="_blank">visit website</a></p>
                     <hr>
                     <h5>McCarren Hotel & Pool <span class="brighten pull-right">718.218.750</span></h5>
-                    <p class="bump"><em>Upscale and right near the park.</em></p>
-                    <p class="bump">160 North 12th Street between Berry Street and Bedford Avenue</p>
+                    <p class="bump"><em>Upscale and right near the park.</em><br>
+                    160 North 12th Street between Berry Street and Bedford Avenue</p>
                     <p><a href="http://www.chelseahotels.com/us/brooklyn/mccarren-hotel-and-pool/about" target="_blank">visit website</a></p>
                     <hr>
                     <h5>The Henry Norman Hotel <span class="brighten pull-right">718.951.6000</span></h5>
-                    <p class="bump"><em>A little out of the way but very nice.</em></p>
-                    <p class="bump">251 North Henry Street</p>
+                    <p class="bump"><em>A little out of the way but very nice.</em><br>
+                    251 North Henry Street</p>
                     <p><a href="http://www.henrynormanhotel.com/" target="_blank">visit website</a></p>
                     <hr>
                     <h5>Urban Cowboy B&B <span class="brighten pull-right">347.840.0525</span></h5>
-                    <p class="bump"><em>Rustic and relaxing with a cozy cabin feel.</em></p>
-                    <p class="bump">111 Powers Street between Leonard Street and Manhattan Avenue</p>
+                    <p class="bump"><em>Rustic and relaxing with a cozy cabin feel.</em><br>
+                    111 Powers Street between Leonard Street and Manhattan Avenue</p>
                     <p><a href="http://urbancowboybnb.com/" target="_blank">visit website</a></p>
                 </div>
             </div>
