--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -133,7 +133,7 @@
                         <li>refreshments</li>
                     </ul>
                     <br>
-                    <p class="brighten">Rides will be provided to and from the church to the restaurant and will begin at <strong>5:15pm</strong>.</p>
+                    <p class="brighten">Rides will be provided from the church to the restaurant and will begin at <strong>5:15pm</strong>.</p>
                 </div>
             </div>
         </div>
