change name of jpg

--- a/jules-timeline/index.html
+++ b/jules-timeline/index.html
@@ -28,7 +28,7 @@
             <h2>
               Oh boy, it's a girl.
             </h2>
-            <img class="img-responsive" src="img/born.jpg" />
+            <img class="img-responsive" src="img/born1.jpg" />
             <ul>
               <li>milestone: <span class="answerspan">we'll I'm here aren't I?</span></li>
               <li>learning experience: <span class="answerspan">how to hold things in my hand</span></li>
