--- a/jules-timeline/index.html
+++ b/jules-timeline/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="heady">
       <h2>The Life and Times of Ms. Jules Nancy Ferrin.</h2>
-      <p>This is a record of the life of Jules Nanacy Ferrin. Each year she (or her parents) filled out the form below. Part journal, part time capsule, part photo album, this timeline is a glimpse into a life, begun at the beginning, by her uncle <a href="mailto:chrisheuberg@gmail.com">Bup</a>.</p>
+      <p>This is a record of the life of Jules Nancy Ferrin. Each year she (or her parents) filled out the form below. Part journal, part time capsule, part photo album, this timeline is a glimpse into a life, begun at the beginning, by her uncle <a href="mailto:chrisheuberg@gmail.com">Bup</a>.</p>
     </div>
     <div class="timeline animated">
       <div class="timeline-row">
